--- a/index.html
+++ b/index.html
@@ -2,145 +2,48 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Девайс</title>
+    <title>Девайс</title>
+	 <link href="css/style.css" rel="stylesheets" type="text/css">
   </head>
   <body>
-  <header class="main-header">
-		<h1 class="logo-header"><a>DEVICE</a></h1>
+	<header class="main-header">
+		<h1>DEVICE</h1>
 		<nav class="main-nav">
-			<p><input class="search"></p>
-			<ul class="user-login">
-				<li>Войти</li>
-			</ul>
-			<ul class="user-functions">
-				<li>Сравнить</li>
-				<li>Корзина</li>
-			</ul>
-			<h2 class="visually-hidden">Навигация по сайту</h2>
-			<ul class="menu">
-				<li>Каталог товаров
-					<ul	class="dropdown-item">
-						<li>
-							<ul class="column a">
-								<li>Виртуальная реальность</li>
-								<li>Моноподы для селфи</li>
-								<li>Экшн-камера</li>
-							</ul>
-						</li>
-						<li>
-							<ul class="column b">
-								<li>Фитнес браслеты</li>
-								<li>Умные часы</li>
-							</ul>
-						</li>
-						<li>
-							<ul class="column c">
-								<li>Квадрокоптеры</li>
-							</ul>
-						</li>
-					</ul>
-				</li>
-			</ul>
-			<ul class="site-navigation">
-					<li>Доставка</li>
-					<li>Гарантия</li>
-					<li>Контакты</li>	
-			</ul>
+			<h2 class="visual-hidden">Навигация по сайту</h2>
+				<label>Поиск по сайту
+					<input type="search" placeholder="Пойск по сайту">
+				</label>
+				<ul class="user-navigation">
+					<li class="login"><button class="user-login">Войти</button></li>
+				</ul>
+				<ul class="user-options">
+					<li><a href="#">Сравнить</a></li>
+					<li><a href="#">Корзина</a></li>
+				</ul>
+				<ul class="menu">
+					<li>Католог товаров
+						<li><a href="#">Виртуальная реальность</a></li>
+						<li><a href="#">Моноподы для селфи</a></li>
+						<li><a href="#">Экшн-камеры</a></li>
+						<li><a href="#">Фитнеc-браслеты</a></li>
+						<li><a href="#">Умные часы</a></li>
+						<li><a href="#">Квадрокоптеры</a></li>
+					</li>
+				</ul>
+				<ul class="services">
+					<li><a href="#">Доставка</a></li>
+					<li><a href="#">Гарантия</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
 		</nav>
-		</header>
+	</header>
 		<main class="container">
-			<p><img src="main-photo.png" width="100" height="100" alt="Селфи палка"></p>
-			<p><b>Делай селфи, как Бен Стиллер!</b></p>
-			<p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
-			<a class="botton" href="#">Подробнее</a>
-			<table>
-				<tr>
-					<td>8,5 м</td>
-					<td>5 кг</td>
-					<td>Карбон</td>
-				</tr>
-			</table>
-		<section class="goods">
-			<ul class="item">
-				<li>
-					<a href="#"><img src="small-1.png" alt=""></a>
-					<p>Виртуальная реальность</p>
-				</li>
-				<li>
-					<a href="#"><img src="small-2.png" alt=""></a>
-					<p>Моноподы для селфи</p>
-				</li>
-				<li>
-					<a href="#"><img src="small-3.png" alt=""></a>
-					<p>Экшн-камеры</p>
-				</li>
-				<li>
-					<a href="#"><img src="small-4.png" alt=""></a>
-					<p>Фитнес-браслеты</p>
-				</li>
-				<li>
-					<a href="#"><img src="small-5.png" alt=""></a>
-					<p>Умные часы</p>
-				</li>
-				<li>
-					<a href="#"><img src="small-6.png" alt=""></a>
-					<p>Квадрокоптеры</p>
-				</li>
-			</ul>
-		</section>
-		<div class="info">
-		<!--Я пока не знаю, как это сделать-->
-			<ul class="item">
-				<li>Доставка</li>
-				<li>Гарантия</li>
-				<li>Кредит</li>
-			</ul>
-		</div>
-		<section class="partners">
-			<ul class="item">
-				<li><img src="partner-1.png" alt=""></li>
-				<li><img src="partner-2.png" alt=""></li>
-				<li><img src="partner-3.png" alt=""></li>
-				<li><img src="partner-4.png" alt=""></li>
-			</ul>
-	</section>
-	<section class="about-us">
-		<h2>О нас</h2>
-		<p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-		<p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
-		<ul class="item">
-			<li><b>Деловые Линии</b></li>
-			<li><b>Автотрейдинг</b></li>
-			<li><b>ЖелДорЭкспедиция</b></li>
-		</ul>
-		<p><a href="#" class="botton">Подробнее о нас</a></p>
-	</section>
-	<section class="contacts">
-		<h2>Контакты</h2>
-		<p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-		<p><img src="map.png" alt=""></p>
-		<p><a href="#" class="botton">Напишите нам</a></p>
-	</section>
+			<h2 class="visual-hidden">Главная страница DEVICE</h2>
+			<section class="slidebar">
+				<img src="img/slider-1.png" width="384" height="486" alt="Селфи палка">
+			</section>
 		</main>
-		<footer class="main-footer">
-			<h1 class="logo-footer">DEVICE</h1>
-			<ul class="user-functions">
-				<li class="user-login">Войти</li>
-				<li>Сравнить</li>
-				<li>Корзина</li>
-			</ul>
-			<p>г.Москва, ул.Строителей, 15</p>
-			<ul class="site-navigation-footer">
-					<li>Доставка</li>
-					<li>Гарантия</li>
-					<li>Контакты</li>	
-			</ul>
-			<p>Тел:+7 (495 495-95-95)</p>
-			<div class="icon">
-				<a href="#">Фейсбук</a>
-				<a href="#">Инстаграмм</a>
-				<a href="#">Твиттер</a>
-			</div>
-		</footer>
+	<footer class="main-footer">
+	</footer>
   </body>
 </html>
