--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Девайс</title>
-	 <link href="css/style.css" rel="stylesheets" type="text/css">
+	 <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
 	<header class="main-header">
@@ -28,7 +28,6 @@
 						<li><a href="#">Фитнеc-браслеты</a></li>
 						<li><a href="#">Умные часы</a></li>
 						<li><a href="#">Квадрокоптеры</a></li>
-					</li>
 				</ul>
 				<ul class="services">
 					<li><a href="#">Доставка</a></li>
@@ -40,7 +39,108 @@
 		<main class="container">
 			<h2 class="visual-hidden">Главная страница DEVICE</h2>
 			<section class="slidebar">
-				<img src="img/slider-1.png" width="384" height="486" alt="Селфи палка">
+				<h3 class="visual-hidden">Слайдбар</h3>
+					<ul>
+						<li><img src="img/slider-1.png" width="384" height="486" alt="Селфи палка"></li>
+						<li><b>Делай селфи, как Бен Стиллер!</b><br><p>Самая длинная палка для селфи доступна в нашем магазине.
+						Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p></li>
+					</ul>
+					<ul>
+						<li><img src="img/slider-2.png" width="345" height="485" alt="Селфи палка"></li>
+						<li><b>Худеем правильно!</b><br><p>Мотивирующие фитнес-браслеты помогут найти в себе силы 
+							не пропускать занятия и соблюдать диету.</p></li>
+					</ul>
+					<ul>
+						<li><img src="img/slider-3.png" width="526" height="334" alt="Селфи палка"></li>
+						<li><b>Порхает как бабочка, жалит как пчела!</b><br><p>Этот обычный, на первый взгляд, квадрокоптер оснащен 
+							мощным лазером, замаскированным под стандартную камеру.</p></li>
+					</ul>
+				<a href="#information">Подробнее</a>
+				<input type="radio" name="1" checked>
+				<input type="radio" name="1">
+				<input type="radio" name="1">
+				<table>
+					<tr>
+						<td>8.5 м</td>
+						<td>5 кг</td>
+						<td>Карбон</td>
+					</tr>
+					<tr>
+						<td>Длина палки</td>
+						<td>Вес палки</td>
+						<td>Материал</td>
+					</tr>
+					
+				</table>
+				<table>
+					<tr>
+						<td>48 часов</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Без подзарядки</td>
+						<td></td>
+						<td></td>
+					</tr>
+				</table>
+				<table>
+					<tr>
+						<td>800 м</td>
+						<td>50 м</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Дальность полёта</td>
+						<td>Радиус поражения</td>
+						<td></td>
+					</tr>
+				</table>
+			</section>
+			<section class="assortment-of-goods">
+				<h3>Асортимент товаров</h3>
+					<ul>
+						<li>Виртуальная реальность</li>
+						<li>Моноподы для селфи</li>
+						<li>Экшн-камеры</li>
+						<li>Фитнеc-браслеты</li>
+						<li>Умные часы</li>
+						<li>Квадрокоптеры</li>
+					</ul>
+			</section>
+			<section class="services">
+				<h3 class="visual-hidden">Сервисы</h3>
+				<ul class="radio-button">
+					<li>
+						<label>
+							<input type="radio" name="2" checked>Доставка
+						</label>
+					</li>
+					<li>
+						<label>
+							<input type="radio" name="2">Гарантия
+						</label>
+					</li>
+					<li>
+						<label>
+							<input type="radio" name="2">Кредит
+						</label>
+					</li>
+				</ul>
+				<ul class="services-description">
+					<li>
+						<h4>Доставка</h4>
+						<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+					</li>
+					<li>
+						<h4>Гарантия</h4>
+						<p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+					</li>
+					<li>
+						<h4>Кредит</h4>
+						<p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется</p>
+					</li>
+				</ul>
 			</section>
 		</main>
 	<footer class="main-footer">
