Разметка первой страницы готово на 90%

--- a/index.html
+++ b/index.html
@@ -142,8 +142,46 @@
 					</li>
 				</ul>
 			</section>
+			<section class="partners">
+				<h3 class="visual-hidden">Наши партнёры</h3>
+				<ul class="partners-list">
+					<li><img src="img/logo-1.png" alt="лого партнёра"></li>
+					<li><img src="img/logo-3.png" alt="лого партнёра"></li>
+					<li><img src="img/logo-3-1.png" alt="лого партнёра"></li>
+					<li><img src="img/logo-4.png" alt="лого партнёра"></li>
+				</ul>
+			</section>
+			<section class="about-us">
+				<h3>О нас</h3>
+				<p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+				<p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+				<ul>
+					<li>Деловые линии</li>
+					<li>Автотрейдинг</li>
+					<li>ЖелДорЭкспедиция</li>
+				</ul>
+				<a href="#">Подробнее о нас</a>
+			<section>
+			<section class="kontakts">
+				<h3>Контакты</h3>
+				<p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+				<img src="img/map.png">
+				<a href="#">Напишите нам</a>
+			<section>
 		</main>
 	<footer class="main-footer">
+		<p><span class="logo">Device</span>г.Москва,ул.Строителей, 15</p>
+		<ul>
+			<li>Доставка</li>
+			<li>Гарантия</li>
+			<li>Контакты</li>
+		</ul>
+		<ul>
+			<li>Войти</li>
+			<li>Сравнить</li>
+			<li>Корзина</li>
+		</ul>
+		<p>Тел.:+7(231)678-66-86</p>
 	</footer>
   </body>
 </html>
